# firebase-ingestor-rs

./: .gitattributes  Cargo.toml  README.md
src/: dnssd.rs  main.rs  util.rs
