[package]
name = "firebase-ingestor-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.0"
firebase-rs = "2.0.6"
mdns-sd = "0.7.3"
serde = "1.0.163"
coap = "0.12"
coap-lite = "0.9.1"
tokio = { version = "1", features = ["full"] }
regex = "1.8.2"
local-ip-address = "0.5.3"
lru = "0.10.0"
serde_json = "1.0.99"
cargo-bloat = "0.11.1"
